# grpc_chatting

./: .gitignore
grpc_c++/: CMakeLists.txt
grpc_c++/chat_client/: CMakeLists.txt  chat_client.cpp  chat_client.h  chat_view.cpp  chat_view.h  main.cpp
grpc_c++/chat_server/: CMakeLists.txt  chat_dbaccessor.cpp  chat_dbaccessor.h  chat_server.cpp  chat_server.h  main.cpp
grpc_c++/dbaccessor/: dbaccessor.go
grpc_c++/protos/: chat.proto  dbaccessor.proto
